--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "backend",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
